# nfctd

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  nfctd.service.in
config/: collectd-nfctd.types.db
debian/: changelog  control  copyright  rules
doc/: RRZN-MIB  mib2c-example.txt  uncrustify.cfg
include/: Makefile.am  lcfg_static.h  nfctd-snmp.h
src/: Makefile.am  lcfg_static.c  nfctd-snmp.c  nfctd.c
